@@ -571,6 +571,10 @@ iCode *stm8_ralloc2_cc(ebbIndex *ebbi)
 
   stm8RegFix (ebbs, count);
 
+  // Try to reuse parameter locations first.
+  mergeSpiltParms(stack_conflict_graph);
+
+  // The allocate the rest of the spilt variables via Chaitin's heuristic.
   chaitin_salloc(stack_conflict_graph);
 
   if(options.dump_graphs)
